[gd_scene load_steps=3 format=3 uid="uid://bsmtbmmhaytat"]

[ext_resource type="Script" path="res://scenes/games/normal_morpion.gd" id="1_pvj5q"]
[ext_resource type="PackedScene" uid="uid://cy737brx6cscd" path="res://scenes/presets/morpion.tscn" id="2_ucrg3"]

[node name="normal_morpion" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pvj5q")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0431373, 0.239216, 0.239216, 1)

[node name="game_container" type="Container" parent="."]
layout_mode = 0
offset_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="morpion" parent="game_container" instance=ExtResource("2_ucrg3")]
layout_mode = 2

[node name="buttons" type="HBoxContainer" parent="."]
layout_mode = 1
offset_right = 133.0
offset_bottom = 31.0

[node name="play_again" type="Button" parent="buttons"]
layout_mode = 2
size_flags_horizontal = 3
text_overrun_behavior = 3

[node name="return_menu" type="Button" parent="buttons"]
layout_mode = 2
size_flags_horizontal = 3
text_overrun_behavior = 3
